@@ -1,0 +1,73 @@
+// Copyright (c) 2007, Niels Martin Hansen
+// All rights reserved.
+//
+// Redistribution and use in source and binary forms, with or without
+// modification, are permitted provided that the following conditions are met:
+//
+//   * Redistributions of source code must retain the above copyright notice,
+//     this list of conditions and the following disclaimer.
+//   * Redistributions in binary form must reproduce the above copyright notice,
+//     this list of conditions and the following disclaimer in the documentation
+//     and/or other materials provided with the distribution.
+//   * Neither the name of the Aegisub Group nor the names of its contributors
+//     may be used to endorse or promote products derived from this software
+//     without specific prior written permission.
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+// ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+// LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+// CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+// SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+// INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+// CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+// POSSIBILITY OF SUCH DAMAGE.
+//
+// -----------------------------------------------------------------------------
+//
+// AEGISUB
+//
+// Website: http://aegisub.cellosoft.com
+// Contact: mailto:jiifurusu@gmail.com
+//
+
+
+#pragma once
+
+
+///////////
+// Headers
+#include "audio_provider.h"
+#include <wx/file.h>
+#include <vector>
+
+
+/////////////////////////////
+// Audio provider base class
+class PCMAudioProvider : public AudioProvider {
+protected:
+	wxMutex filemutex;
+	wxFile file;
+
+	// Hold data for an index point,
+	// to support files where audio data are
+	// split into multiple blocks.
+	// Using long long's should be safe on most compilers,
+	// wx defines wxFileOffset as long long when possible
+	struct IndexPoint {
+		long long start_byte;
+		long long start_sample;
+		long long num_samples;
+	};
+	typedef std::vector<IndexPoint> IndexVector;
+	IndexVector index_points;
+
+public:
+	virtual void GetAudio(void *buf, __int64 start, __int64 count);
+};
+
+// Construct the right PCM audio provider (if any) for the file
+AudioProvider *CreatePCMAudioProvider(const wxString &filename);
+
